tdf#155349 std::move of a std::optional leave behind a set std::optional

unlike std::move of a std::unique_ptr which leaves behind an empty
std::unique_ptr

so if HasPaintRegion was true before TakePaintRegion it was
still true after TakePaintRegion

Change-Id: I6569f5ccd8081cbcec42190c474a98c4e28030a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151774
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Michael Stahl <michael.stahl@allotropia.de>